2003-07-25  Dave Hyatt  <hyatt@apple.com>

	Rename box and inline-box to -khtml-box and -khtml-inline-box.
	
        Reviewed by john

        * khtml/css/cssparser.cpp:
        (CSSParser::parseValue):
        * khtml/css/cssvalues.c:
        (hash_val):
        (findValue):
        * khtml/css/cssvalues.h:
        * khtml/css/cssvalues.in:

2003-07-25  Dave Hyatt  <hyatt@apple.com>

	Fix for 3343529, inline blocks crashing Safari.  There were lots of problems with
	inlne-blocks.  This code gets basic inline-blocks working properly (with no crashes).

	Several functions have been patched to take an isRootLineBox parameter.  This is used
	to tell whether you're supposed to examine the root line box for a block or the block
	itself.  In the case of baselinePosition and lineHeight, it indicates whether the caller
	wants to measure the outside or inside of the box.  

	The outside of an inline-block is like a replaced element (e.g., an image), but the 
	inside is like a block, e.g., you want measurements for
	the line height and baseline position of a root line box for that block.

	Similarly, createInlineBox has been patched in order to know whether you're making a
	root inline box *inside* the inline-block or an inline box that *encompasses* the
	inline-block element (like you'd do for an image).

	A number of places had isInline() calls and needed to be patched to also check
	isInlineBlockOrInlineTable().  How to treat the inline-block again basically depends
	on whether the caller is looking at the outside of the block (in which case you're like
	an inline replaced element) or the inside of the block (in which case you're just like
	a block).
	
        Reviewed by darin

        * ChangeLog:
        * khtml/rendering/bidi.cpp:
        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:
        * khtml/rendering/render_box.cpp:
        (RenderBox::calcWidth):
        (RenderBox::calcHeight):
        * khtml/rendering/render_flow.cpp: